# Personal-AI-Employee-Hackathon-0

./: .env.example  .gitignore  AGENTS.md  Company_Handbook.md  Dashboard.md  PRIVACY_POLICY.md  README.md  claude.md  requirments.md  skills-lock.json
.agents/skills/gmail-watcher/: SKILL.md
.agents/skills/hitl-approval/: SKILL.md
.agents/skills/linkedin-post/: SKILL.md
.agents/skills/process-needs-action/: SKILL.md
.agents/skills/tool-integration/: SKILL.md
.agents/skills/update-dashboard/: SKILL.md
Done/: EMAIL_2026-02-25_order_inquiry_sarah.md
Logs/: 2026-02-25.json  2026-03-03.json  2026-03-05.json  linkedin_logs.md
Needs_Action/: FILE_2026-02-25_145900_332220_a1c1_order_SH4902_urgent.txt.md  FILE_2026-02-25_145900_845331_a305_test_drop.txt.md  FILE_2026-02-25_193000_000000_test_drop.txt.md  FILE_2026-03-03_082413_064920_7342_test_task.md.md  FILE_order_SH4902_urgent.txt  FILE_test_drop.txt  FILE_test_task.md  test_post.md
watchers/: .env.example  USER_DATA_DELETION.md  get_linkedin_token.py  pyproject.toml
watchers/src/: approval_manager.py  approval_watcher.py  audit_logger.py  base_watcher.py  calendar_service.py  classifier.py  config.py  dashboard.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  mcp_linkedin_server.py  orchestrator.py  slack_service.py
watchers/src/templates/: dashboard.html
watchers/src/tools/: __init__.py  base_tool.py  gmail_tool.py  linkedin_tool.py  registry.py
watchers/tests/: test_approval_manager.py  test_calendar_service.py  test_classifier.py  test_filesystem_watcher.py  test_gmail_watcher.py  test_linkedin_watcher.py  test_slack_service.py  test_tools.py
