[project]
name = "ai-employee-watchers"
version = "0.1.0"
description = "Perception layer for the AI Employee — file system watchers"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
watch-inbox = "src.filesystem_watcher:main"
watch-gmail = "src.gmail_watcher:main"
watch-approvals = "src.approval_watcher:main"
watch-linkedin = "src.linkedin_watcher:main"
mcp-linkedin = "src.mcp_linkedin_server:main"
orchestrate = "src.orchestrator:main"
dashboard = "src.dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
